in progress work, tables and about tab not functional

--- a/pyScriptsDB/templates/extra.html
+++ b/pyScriptsDB/templates/extra.html
@@ -112,3 +112,12 @@
     </div>
 </div>
             
+
+    <!-- Dropdown to select a table -->
+    <div class="mb-4">
+        <label for="tableSelect" class="form-label">Select Table</label>
+        <select class="form-control" id="tableSelect" onchange="loadTableData(this.value)">
+            <option value="">Select a table</option>
+            <!-- Dropdown will be populated dynamically -->
+        </select>
+    </div>
