finishing out tables page

--- a/pyScriptsDB/templates/features.html
+++ b/pyScriptsDB/templates/features.html
@@ -16,9 +16,9 @@
         .modal-content {
             background-color: #f7f7f4; /* Light gray background */
             border-radius: 8px;
+            color: Onyx; 
         }
     
-        /* Change the modal header background color */
         .modal-header {
             background-color: #f7f7f7; 
             display: flex; /* Enable flexbox */
@@ -26,24 +26,29 @@
             align-items: center; /* Align vertically */
             border-color: #e78f79;
             font-weight: bold;
+            color: Onyx; 
         
         }
     
         .custom-list-group {
             background-color: #f7f7f4; 
+            color: Onyx; 
         }
 
         .h1 {
             font-weight: bold;
+            color: Onyx; 
         }
         .custom-list-group .list-group-item:hover {
             background-color: #dededc; 
+            color: Onyx; 
         }
 
         /* Change the modal footer background color */
         .modal-footer {
             background-color: #f7f7f7; /* Light gray footer */
             border-color: #e78f79;
+
         }
     
         /* Change the modal overlay (background color when modal is open) */
@@ -72,6 +77,7 @@
             padding: 20px;
             border-radius: 8px;
             text-align: center;
+            color: Onyx; 
             cursor: pointer;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             min-height: 250px; /* Set the minimum height, adjust as needed */
@@ -100,6 +106,7 @@
             font-size: 1.5rem;
             font-weight: bold;
             margin-top: 15px;
+            color:#393E41;
         }
         
 
@@ -107,6 +114,7 @@
             margin-top: 10px;
             font-size: 1rem;
             flex-grow: 1;
+            color: #393E41;
         }
 
         .feature-card-container {
@@ -114,6 +122,7 @@
             flex-wrap: wrap;
             justify-content: space-between;
             gap: 20px;
+            color: #393E41;
         }
 
         /* Ensure responsiveness */
@@ -137,12 +146,14 @@
         #queryModalLabel {
             margin-right: 10px; /* Adds space between title and icon */
             font-weight: bold;
+            color: #393E41;
             
         }
 
         #yearInputModalLabel {
             margin-right: 10px; /* Adds space between title and icon */
             font-weight: bold;
+            color: #393E41;
             
         }
 
@@ -169,15 +180,18 @@
 
         #queryModal .modal-body {
             background-color: #f7f7f4; /* Same as the modal background color */
+            color: #393E41;
         }
     
         #queryModal .modal-body .list-group {
             background-color: #f7f7f4; /* Same background as modal */
+            color: #393E41;
         }
     
         #queryModal .modal-body .list-group-item {
             background-color: #f7f7f4; /* Same background as modal */
             border-color: #e06f52;
+            color: #393E41;
         }
     
         #queryModal .modal-body .list-group-item:hover {
@@ -214,6 +228,7 @@
     
         /* Adjust margin between navbar and content */
         body {
+            color: #393E41;
             margin-top: 0; /* Remove any default margin at the top */
         }
 
@@ -223,6 +238,7 @@
         }
 
         #queryMenu h1 {
+            color: #393E41;
             margin-top: 25px; 
             margin-bottom: 20px;/* Add some space between the heading and feature cards */
         }
@@ -251,7 +267,8 @@
         .navbar-toggler-icon span {
             display: block;
             background-color: #d9593a; /* Waffle square color */
-            border-radius: 2px;         /* Slightly rounded corners */
+            border-radius: 0px; 
+            border-color:  #d9593a; /* Slightly rounded corners */
         }
 
         /* Square size adjustments */
@@ -329,6 +346,7 @@
             border-radius: 8px;
             text-align: center;
             cursor: pointer;
+            color: #393E41;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             min-height: 250px; /* Ensure all cards have a consistent minimum height */
             height: 100%; /* Make sure all cards stretch to the same height */
@@ -350,6 +368,7 @@
             font-size: 1.5rem;
             font-weight: bold;
             margin-top: 15px;
+            color: #393E41;
         }
         
         /* Feature Card Description */
@@ -357,12 +376,14 @@
             margin-top: 10px;
             font-size: 1rem;
             flex-grow: 1;
+            color: #393E41;
         }
         
         /* Adjust the column layout for each card on mobile */
         .feature-card-container .col-md-4 {
             display: block; /* Ensures the card fills the full width on smaller screens */
             margin-bottom: 20px; /* Additional spacing below each card */
+            color: #393E41;
         }
                 
 
