--- a/pyScriptsDB/templates/features.html
+++ b/pyScriptsDB/templates/features.html
@@ -444,6 +444,11 @@
                                 <i class="bi bi-info-circle"></i> About
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('add_data') }}">
+                                <i class="bi bi-house-door"></i> Add Data
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
