--- a/pyScriptsDB/templates/features.html
+++ b/pyScriptsDB/templates/features.html
@@ -10,13 +10,32 @@
     <!-- Bootstrap Icons CSS (from CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     
     <style>
+        h1 {
+            font-size: 2.5rem;  /* Larger font size for impact */
+            font-weight: 700;
+            color:#393E41;  /* Darker color for good contrast */
+            text-align: center;
+            padding-left: 30px;  /* Add extra padding to the left for text inside */
+            padding-right: 30px; /* Add extra padding to the right for text inside */
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            padding: 20px 0;
+            background-color:#f7f7f4; /* Subtle white background */
+            border-radius: 5px;  /* Rounded corners for the background */
+            margin-bottom: 40px; /* Adds space below the title */
+            border-color: #d9593a;
+            border: 0px solid #d9593a;
+
+        }
 
         .modal-content {
             background-color: #f7f7f4; /* Light gray background */
             border-radius: 8px;
-            color: Onyx; 
+            color:#393E41;
         }
     
         .modal-header {
@@ -26,22 +45,22 @@
             align-items: center; /* Align vertically */
             border-color: #e78f79;
             font-weight: bold;
-            color: Onyx; 
+            color:#393E41;
         
         }
     
         .custom-list-group {
             background-color: #f7f7f4; 
-            color: Onyx; 
+            color: #393E41;
         }
 
         .h1 {
             font-weight: bold;
-            color: Onyx; 
+            color:#393E41;
         }
         .custom-list-group .list-group-item:hover {
             background-color: #dededc; 
-            color: Onyx; 
+            color: #393E41;
         }
 
         /* Change the modal footer background color */
@@ -77,7 +96,7 @@
             padding: 20px;
             border-radius: 8px;
             text-align: center;
-            color: Onyx; 
+            color: #393E41;
             cursor: pointer;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             min-height: 250px; /* Set the minimum height, adjust as needed */
@@ -230,6 +249,8 @@
         body {
             color: #393E41;
             margin-top: 0; /* Remove any default margin at the top */
+            font-family: 'Roboto', sans-serif; /* Set the font to Roboto for the whole body */
+
         }
 
         /* Adjust the top margin of the first section (Query Menu) */
@@ -342,7 +363,7 @@
             flex-direction: column;
             justify-content: space-between;
             padding: 20px;
-            border: 1.8px solid #d9593a;
+            border: 3px solid #d9593a;
             border-radius: 8px;
             text-align: center;
             cursor: pointer;
@@ -386,7 +407,7 @@
             color: #393E41;
         }
                 
-
+    
     </style>
 </head>
 <body style="background-color: #f7f7f4;">
@@ -446,7 +467,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('add_data') }}">
-                                <i class="bi bi-house-door"></i> Add Data
+                                <i class="bi bi-file-earmark-plus"></i> Add Data
                             </a>
                         </li>
                     </ul>
