--- a/pyScriptsDB/templates/tables.html
+++ b/pyScriptsDB/templates/tables.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap Icons CSS (from CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
 
@@ -521,7 +522,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('add_data') }}">
-                                <i class="bi bi-house-door"></i> Add Data
+                                <i class="bi bi-file-earmark-plus"></i> Add Data
                             </a>
                         </li>
                     </ul>
