--- a/pyScriptsDB/templates/add_data.html
+++ b/pyScriptsDB/templates/add_data.html
@@ -130,8 +130,10 @@
             font-weight: 400; /* Make the text bolder */
             font-size: 2rem; /* Increase the font size */
             font-family: 'Roboto', sans-serif; /* Set the font to Roboto for the whole body */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Adds a dark shadow for contrast */
             color: #f7f7f4;
+            text-shadow: 
+            3px 3px 10px rgba(0, 0, 0, 0.6);  /* Stronger shadow with blur */
+
         }
 
         .container {
